Completed main-features-section

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -26,3 +26,17 @@
         @content;
     }
 }
+
+//Gradient
+@mixin gradient($color1, $color2){
+    background-image: linear-gradient(to right, $color1 0%, $color2 100%);
+}
+
+//Background-image
+@mixin bg-icon($image) {
+    background-repeat: no-repeat;
+    background-position: left center;
+    text-align: center;
+    background-size: 2.4rem;
+    background-image: url(../img/#{$image}.png);
+}
