--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,10 @@ body {
   font-family: "Raleway", san-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
   max-width: 1100px;
   width: 90%;
@@ -37,7 +41,8 @@ body {
   position: absolute;
   right: 0;
   padding: 1rem;
-  max-width: 400px;
+  width: 400px;
+  background-color: #ffffff;
 }
 
 .cart-content:hover .content .button {
@@ -46,6 +51,7 @@ body {
   text-align: center;
   color: #ffffff;
   text-decoration: none;
+  display: block;
 }
 
 .hero {
@@ -158,4 +164,137 @@ body {
   text-align: center;
   background-size: 2.4rem;
   background-image: url(../img/icon3.png);
+}
+
+.course-list {
+  margin-top: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.course-list .course {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 calc(50% - 1 rem);
+  flex: 0 0 calc(50% - 1 rem);
+  background-color: #ffffff;
+  margin-bottom: 1rem;
+  border: 1px solid #e5e5e5;
+}
+
+@media (min-width: 768px) {
+  .course-list .course {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 calc(33.3% - 1rem);
+    flex: 0 0 calc(33.3% - 1rem);
+  }
+}
+
+@media (min-width: 1000px) {
+  .course-list .course {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 calc(25% - 1rem);
+    flex: 0 0 calc(25% - 1rem);
+  }
+}
+
+.course-list .course .course-info {
+  padding: 1rem;
+}
+
+.course-list .course .course-info h4 {
+  margin: 0;
+  font-size: 1.2rem;
+}
+
+.course-list .course .course-info .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.course-list .course .course-info .price .regular {
+  text-decoration: line-through;
+}
+
+.course-list .course .course-info .price .offer {
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+
+.course-list .course .course-info .button {
+  background-color: #33c3f0;
+  padding: .5rem 1rem;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+}
+
+.footer {
+  border-top: 1px solid #f0f0f0;
+  margin-top: 1rem;
+  padding-top: 2rem;
+}
+
+.footer .container-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .footer .container-footer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+@media (min-width: 1000px) {
+  .menu {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 calc(30% - 1rem);
+    flex: 0 0 calc(30% - 1rem);
+  }
+}
+
+.menu a {
+  color: #000000;
+  text-decoration: none;
+  margin-bottom: .4rem;
+  text-align: center;
+}
+
+@media (min-width: 1000px) {
+  .menu a {
+    text-align: left;
+  }
 }
