--- a/scss/app.scss
+++ b/scss/app.scss
@@ -15,7 +15,9 @@ body {
     
     font-family: $mainFont;    
 }
-
+img{
+    max-width: 100%;
+}
 .container {
     max-width: 1100px;
     width: 90%;
@@ -36,7 +38,8 @@ body {
         position: absolute;
         right: 0;
         padding: 1rem;
-        max-width: 400px;
+        width: 400px;
+        background-color: $white;
         
         .button {
             @include button($secondary);
@@ -116,4 +119,85 @@ body {
             }
         }
     } 
+}
+.course-list{
+    margin-top: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+.course {
+    flex: 0 0 calc(50% - 1 rem);
+    @include tablet{
+        flex: 0 0 calc(33.3% - 1rem);
+    }
+    @include desktop{
+        flex: 0 0 calc(25% - 1rem);
+    }
+    background-color: $white;
+    margin-bottom: 1rem;
+    border: 1px solid darken($gray, 5%);
+
+
+.course-info {
+    padding: 1rem;
+    h4 {
+        margin: 0;
+        font-size: 1.2rem;
+    }
+    .price{
+        display: flex;
+        justify-content: space-between;
+
+        .regular {
+            text-decoration: line-through;
+        }
+        .offer {
+            font-size: 1.4rem;
+            font-weight: 700;
+        }
+        
+    }
+    .button {
+        @include button($primary);
+        
+    }
+}
+}
+}
+
+.footer {
+    border-top: 1px solid darken($gray, .7);
+    margin-top: 1rem;
+    padding-top: 2rem;
+
+    .container-footer{
+        display: flex;
+        flex-direction: column;
+
+        @include tablet {
+            flex-direction: row;
+        }
+    }
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+
+    flex: 1;
+
+    @include desktop {
+        flex: 0 0 calc(30% - 1rem);
+    }
+    a {
+        color: $black;
+        text-decoration: none;
+        margin-bottom: .4rem;
+        text-align: center;
+        @include desktop{
+            text-align: left;
+        }
+    }
 }
